Misc spacing, styling, and dynamic content tweaks. Correctly formats the "total left at the end of the month", fixes a missed class name change, adds spacing under the expense region selector, and fixes a bug with the JS to show if estimated expenses are greater than the expected salary.

--- a/src/disclosures/css/disclosures.less
+++ b/src/disclosures/css/disclosures.less
@@ -1251,7 +1251,7 @@
    Estimated monthly expenses
    ========================================================================== */
 
-.average-salary .column-well_content {
+.debt-burden .column-well_content {
 
   .respond-to-min(@bp-graph-cols-min, {
     position: absolute;
@@ -1316,6 +1316,11 @@
       margin-bottom: unit(10px / @font-size, em);
       text-transform: none;
     }
+
+    .cf-select {
+      margin-bottom: unit(20px / @base-font-size-px, em);
+    }
+
   }
 
   .line-item {
